--- a/mac/.skhdrc
+++ b/mac/.skhdrc
@@ -3,28 +3,63 @@
 # https://github.com/Hritik14/dwm/blob/my_force/hotkeys.h
 
 # navigation
-alt - j : yabai -m window --focus next 
-alt - k : yabai -m window --focus prev 
+alt - j : yabai -m window --focus north
+alt - k : yabai -m window --focus south 
+alt - l : yabai -m window --focus east 
+alt - h : yabai -m window --focus west 
 alt - 0x0D : yabai -m display --focus prev
 alt - 0x0E : yabai -m display --focus next
 
 # spaces
 cmd - tab : yabai -m space --focus recent 
+alt - 1 : yabai -m space --focus 1
+alt - 2 : yabai -m space --focus 2
+alt - 3 : yabai -m space --focus 3
+alt - 4 : yabai -m space --focus 4
+alt - 5 : yabai -m space --focus 5
+alt - 6 : yabai -m space --focus 6
+alt - 7 : yabai -m space --focus 7
+alt - 8 : yabai -m space --focus 8
+alt - 9 : yabai -m space --focus 9
+alt - 0 : yabai -m space --focus 10
+cmd + shift + alt - 1 : yabai -m space --move 1
+cmd + shift + alt - 2 : yabai -m space --move 2
+cmd + shift + alt - 3 : yabai -m space --move 3
+cmd + shift + alt - 4 : yabai -m space --move 4
+cmd + shift + alt - 5 : yabai -m space --move 5
+cmd + shift + alt - 6 : yabai -m space --move 6
+cmd + shift + alt - 7 : yabai -m space --move 7
+cmd + shift + alt - 8 : yabai -m space --move 8
+cmd + shift + alt - 9 : yabai -m space --move 9
+cmd + shift + alt - 0 : yabai -m space --move 10
+
 
 # moving windows
 shift + alt - h : yabai -m window --swap west
 shift + alt - j : yabai -m window --swap south
 shift + alt - k : yabai -m window --swap north
 shift + alt - l : yabai -m window --swap east
-alt - return : yabai -m window --swap recent; \
-               yabai -m window --focus recent
+# alt - return : yabai -m window --swap recent; \
+#                yabai -m window --focus recent
+alt - return : ~/bin/cycle_counterclockwise.sh
+shift + alt - 1 : yabai -m window --space 1
+shift + alt - 2 : yabai -m window --space 2
+shift + alt - 3 : yabai -m window --space 3
+shift + alt - 4 : yabai -m window --space 4
+shift + alt - 5 : yabai -m window --space 5
+shift + alt - 6 : yabai -m window --space 6
+shift + alt - 7 : yabai -m window --space 7
+shift + alt - 8 : yabai -m window --space 8
+shift + alt - 9 : yabai -m window --space 9
+shift + alt - 0 : yabai -m window --space 10
+
 
 # equalize window size
 cmd + ctrl - 0 : yabai -m space --balance
 
 # change layout
 alt - f : yabai -m window --toggle native-fullscreen
-alt - m : yabai -m window --toggle zoom-parent
+alt - m : yabai -m window --toggle zoom-fullscreen
 alt - r : yabai -m window --toggle split
 
 # toggle current space layout
@@ -37,3 +72,6 @@ ctrl + alt - space : yabai -m window --toggle float;\
 
 # hotkeys
 shift + alt - return : open -na iterm
+
+# disable certain macos shortcuts
+cmd - h : true
