--- a/mac/.tmux.conf
+++ b/mac/.tmux.conf
@@ -2,8 +2,30 @@ set -g mouse on
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi Enter send -X copy-selection-and-cancel
+bind-key / copy-mode \; send-key ?
+bind-key o break-pane -t :
+set-option -g history-limit 100000
 
 # Open new windows/panes in same directory
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"'"'
+
+set -g pane-border-status top
+set -g pane-border-format "#{pane_index} #{pane_current_command} #{s|/Users/neo|~|:pane_current_path}"
+set -g status-interval 1
+set -g status-right '#{s|/Users/neo|~|:pane_current_path}'
+bind-key w choose-tree -Z -w -F "[ #{=10;p10:window_name}]: #{pane_current_command} #{b:pane_current_path}"
+
+
+# Italics: https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6
+set -g default-terminal "xterm-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
+set -s escape-time 0
+
+# Colors <3
+set -g status-bg grey15
+set -g status-fg gray50
+set-window-option -g window-status-current-style fg=gray80
