--- a/mac/.yabairc
+++ b/mac/.yabairc
@@ -3,38 +3,49 @@ yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 sudo yabai --load-sa
 
 # global settings
-yabai -m config mouse_follows_focus          off
+yabai -m config mouse_follows_focus          on
 yabai -m config focus_follows_mouse          autoraise
 yabai -m config window_origin_display        default
 yabai -m config window_placement             second_child
-yabai -m config window_topmost               on
 yabai -m config window_opacity               off
 yabai -m config active_window_opacity        1.0
 yabai -m config normal_window_opacity        0.001
-yabai -m config window_border                off
-yabai -m config window_border_width          1
-yabai -m config active_window_border_color   0xff775759
-yabai -m config normal_window_border_color   0xff555555
 yabai -m config insert_feedback_color        0xffd75f5f
 yabai -m config split_ratio                  0.3
 yabai -m config auto_balance                 off
 yabai -m config mouse_modifier               fn
-yabai -m config mouse_action1                move
-yabai -m config mouse_action2                resize
+yabai -m config mouse_action1                resize
+yabai -m config mouse_action2                move
 yabai -m config mouse_drop_action            swap
 
 # general space settings
 yabai -m config layout                       bsp
+# yabai -m config layout                       float
 yabai -m config top_padding    0
 yabai -m config bottom_padding 0
 yabai -m config left_padding   0
 yabai -m config right_padding  0
-yabai -m config window_gap     0
+yabai -m config window_gap     10
+
+# focus window after active space changes
+yabai -m signal --add event=space_changed action="yabai -m window --focus \$(yabai -m query --windows --space | jq .[0].id)"
 
 # needs SIP disabled
 yabai -m config window_shadow float
 
 # rules
-yabai -m rule --add app="^(Calculator|VLC|System Preferences|Flow)$" manage=off
+# yabai -m rule --add app="^(Calculator|VLC|System Preferences|Flow)$" manage=off layer=above
+# yabai -m rule --add app="^KeePassXC$" sticky=off manage=off
+
+# Jetbrains / IDEA needs special treatment
+JB_Apps='^(CLion|PyCharm|IntelliJ IDEA)$'
+yabai -m rule --add app="${JB_Apps}" manage=off
+# If `Open last project when launch` is checked, add this rule. And make sure `always show project path` is also checked.
+# yabai -m rule --add app="${JB_Apps}" title=".*\[.*\].*" manage=on 
+yabai -m rule --add app="${JB_Apps}" title="^$"  manage=on
+yabai -m rule --add app="^eclipse-workspace" manage=off
+
+# janky borders
+borders active_color=0xff494d64 width=5.0 &
 
 echo "yabai configuration loaded.."
