--- a/mac/.skhdrc
+++ b/mac/.skhdrc
@@ -11,17 +11,17 @@ alt - 0x0D : yabai -m display --focus prev
 alt - 0x0E : yabai -m display --focus next
 
 # spaces
-cmd - tab : yabai -m space --focus recent 
-alt - 1 : yabai -m space --focus 1
-alt - 2 : yabai -m space --focus 2
-alt - 3 : yabai -m space --focus 3
-alt - 4 : yabai -m space --focus 4
-alt - 5 : yabai -m space --focus 5
-alt - 6 : yabai -m space --focus 6
-alt - 7 : yabai -m space --focus 7
-alt - 8 : yabai -m space --focus 8
-alt - 9 : yabai -m space --focus 9
-alt - 0 : yabai -m space --focus 10
+# cmd - tab : yabai -m space --focus recent 
+# alt - 1 : yabai -m space --focus 1
+# alt - 2 : yabai -m space --focus 2
+# alt - 3 : yabai -m space --focus 3
+# alt - 4 : yabai -m space --focus 4
+# alt - 5 : yabai -m space --focus 5
+# alt - 6 : yabai -m space --focus 6
+# alt - 7 : yabai -m space --focus 7
+# alt - 8 : yabai -m space --focus 8
+# alt - 9 : yabai -m space --focus 9
+# alt - 0 : yabai -m space --focus 10
 cmd + shift + alt - 1 : yabai -m space --move 1
 cmd + shift + alt - 2 : yabai -m space --move 2
 cmd + shift + alt - 3 : yabai -m space --move 3
@@ -70,8 +70,13 @@ cmd + ctrl - f : yabai -m space --layout float
 ctrl + alt - space : yabai -m window --toggle float;\
                      yabai -m window --grid 4:4:1:1:2:2
 
+# float current window
+alt - space : yabai -m window --toggle float
+
 # hotkeys
 shift + alt - return : open -na iterm
 
 # disable certain macos shortcuts
 cmd - h : true
+
+f6 : sudo killall -HUP mDNSResponder && sudo killall -9 mDNSResponder mDNSResponderHelper
