--- a/mac/.tmux.conf
+++ b/mac/.tmux.conf
@@ -6,6 +6,7 @@ bind-key -T copy-mode-vi Enter send -X copy-selection-and-cancel
 bind-key / copy-mode \; send-key ?
 bind-key o break-pane -t :
 set-option -g history-limit 100000
+set-option -g renumber-windows on
 
 # Open new windows/panes in same directory
 bind '"' split-window -c "#{pane_current_path}"
