--- a/mac/.yabairc
+++ b/mac/.yabairc
@@ -1,22 +1,24 @@
+#!/usr/bin/env sh
+
 # Load scripting additions
 yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 sudo yabai --load-sa
 
 # global settings
-yabai -m config mouse_follows_focus          on
-yabai -m config focus_follows_mouse          autoraise
-yabai -m config window_origin_display        default
-yabai -m config window_placement             second_child
-yabai -m config window_opacity               off
-yabai -m config active_window_opacity        1.0
-yabai -m config normal_window_opacity        0.001
-yabai -m config insert_feedback_color        0xffd75f5f
-yabai -m config split_ratio                  0.3
-yabai -m config auto_balance                 off
-yabai -m config mouse_modifier               fn
-yabai -m config mouse_action1                resize
-yabai -m config mouse_action2                move
-yabai -m config mouse_drop_action            swap
+yabai -m config mouse_follows_focus          on \
+                 focus_follows_mouse          autoraise \
+                 window_origin_display        default \
+                 window_placement             second_child \
+                 window_opacity               off \
+                 active_window_opacity        1.0 \
+                 normal_window_opacity        0.001 \
+                 insert_feedback_color        0xffd75f5f \
+                 split_ratio                  0.3 \
+                 auto_balance                 off \
+                 mouse_modifier               fn \
+                 mouse_action1                resize \
+                 mouse_action2                move \
+                 mouse_drop_action            swap \
 
 # general space settings
 yabai -m config layout                       bsp
