--- a/mac/.tmux.conf
+++ b/mac/.tmux.conf
@@ -3,6 +3,7 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 bind-key -T copy-mode-vi Enter send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
 bind-key / copy-mode \; send-key ?
 bind-key o break-pane -t :
 set-option -g history-limit 100000
